#############################################################################
BETA PUBLIC RELEASE VERSION 0.4.1       XX-XX-XX 
#############################################################################
 - NEW FEATURES
   * Added new APOLAR section to input file and updated documentation
   * Added support for standard one-character chain IDs in PQR files.	
   * Added a new "spl4" charge method (chgm) option to support a quintic 
     B-spline discretization (thanks to Michael Schnieders).
   * Updated psize.py
   * Added a new "spl4" ion-accessibility coefficient model (srfm) option 
     that uses a 7th order polynomial. This option provides the higher
     order continuity necessary for stable force calculations with atomic
     multipole force fields (thanks to Michael Schnieders).
   * Modified the "sdh" boundary condition (bcfl) option to include dipoles
     and quadrupoles.  Well-converged APBS calculations won't change with the 
     dipole and quadrupole molecular moments included in the boundary 
     potential estimate, but calculations run with the boundary close to the 
     solute should give an improved result (thanks to Michael Schnieders). 
   * Updated documentation to reflect new iAPBS features (NAMD support)
   * Added Gemstone example to the tutorial
   * New example demonstrating salt dependence of protein-RNA interactions.
   * Added code to allow for an interface with TINKER (thanks to Michael
     Schnieders).
   * The Python wrappers are now disabled by default.  They can be compiled
     by passing the --enable-python flag to the configure script.  This
     will allow users to attempt to compile the wrappers on various systems
     as desired.
   * Added XML support for reading in parameter files when using PDB files as
     input.  New XML files can be found in tools/conversion/param/vparam.
   * Added XML support for reading "PQR" files in XML format.
   * Added support for command line --version and --help flags.	